[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/Russo_One.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/states/Menu.gd" type="Script" id=2]
[ext_resource path="res://src/states/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/states/CreditsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/states/LevelSelect.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tiles/background.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="Menu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="V" type="VBoxContainer" parent="."]
margin_left = 174.0
margin_top = 125.0
margin_right = 466.0
margin_bottom = 354.0
custom_constants/separation = 32

[node name="Title" type="Label" parent="V"]
margin_right = 292.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Unweighted"

[node name="Buttons" type="VBoxContainer" parent="V"]
margin_left = 89.0
margin_top = 88.0
margin_right = 202.0
margin_bottom = 229.0
size_flags_horizontal = 4

[node name="PlayButton" type="Button" parent="V/Buttons"]
margin_right = 113.0
margin_bottom = 25.0
text = "Play"

[node name="LevelSelectButton" type="Button" parent="V/Buttons"]
margin_top = 29.0
margin_right = 113.0
margin_bottom = 54.0
text = "Select Level"

[node name="OptionsButton" type="Button" parent="V/Buttons"]
margin_top = 58.0
margin_right = 113.0
margin_bottom = 83.0
text = "Options"

[node name="CreditsButton" type="Button" parent="V/Buttons"]
margin_top = 87.0
margin_right = 113.0
margin_bottom = 112.0
text = "Credits"

[node name="QuitButton" type="Button" parent="V/Buttons"]
margin_top = 116.0
margin_right = 113.0
margin_bottom = 141.0
text = "Quit"

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="OptionsMenu" parent="Canvas" instance=ExtResource( 3 )]
visible = false

[node name="CreditsMenu" parent="Canvas" instance=ExtResource( 4 )]
visible = false

[node name="LevelSelect" parent="Canvas" instance=ExtResource( 5 )]
visible = false

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 2

[connection signal="pressed" from="V/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="V/Buttons/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="V/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="V/Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="V/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="options_exited" from="Canvas/OptionsMenu" to="." method="_on_OptionsMenu_options_exited"]
[connection signal="credits_exiting" from="Canvas/CreditsMenu" to="." method="_on_CreditsMenu_credits_exiting"]
[connection signal="level_select_exited" from="Canvas/LevelSelect" to="." method="_on_LevelSelect_level_select_exited"]
